Add dictionaries, bug Fixes minor refactoring